# Face_reco_ssc

./: .gitignore  README.md  setup.cfg
utcn/face_reco/: main.py
