[metadata]
name = face_recognition
version = 0.0.1
description = This package contains a simple face recognition demo
author = Nedelcu

[options]
packages = find:
install_requires =
    numpy==1.21.6
    opencv-python==4.6.0.66
    setup-py-upgrade==1.2.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    face_reco_cli = utcn.face_reco.main:main
